# bi-ide-v8

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADVANCED_FEATURES_TRACK.md  BUILD_STATUS_100_PERCENT.md  COMPLETION_CERTIFICATE.md  COMPLETION_SUMMARY.md  Cargo.toml  DEPLOY.md  DESKTOP_EXECUTION_STATUS.md  Dockerfile  Dockerfile.gpu  Dockerfile.worker  FILES_MAP.md  FINAL_CHECKLIST.md  FINAL_COMPLETE_REPORT.md  FINAL_EXECUTION_PLAN.md  FINAL_IMPLEMENTATION_COMPLETE.md  FINAL_IMPLEMENTATION_REPORT.md  GAPS_ANALYSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LEGACY_FEATURE_PARITY_AUDIT.md  MASTER_FULL_SYSTEM_RUNBOOK_2026-03-03.md  Makefile  PLAN_COMPLETE_100.md  PROJECT_AUDIT_REPORT.md  PROJECT_AUDIT_REPORT_FINAL.md  PROJECT_COMPLETE_100.md  PROJECT_STATUS_REAL.md  README.md  README_DESKTOP.md  RELEASE_READINESS_CHECKLIST.md  REMAINING_WORK_CHECKLIST.md  ROLLBACK_PLAYBOOK.md  RTX4090_SETUP.md  RULES_FEATURE_GAP_AUDIT.md  (+62 more)
.agent/: rules.md
agent/: install_linux.sh  install_macos.sh  install_windows.ps1
agents/desktop-agent-rs/: Cargo.toml
agents/desktop-agent-rs/src/: config.rs  fs.rs  git.rs  ipc.rs  main.rs  telemetry.rs  training.rs  worker.rs
ai/: __init__.py  llm_client.py  rtx4090_client.py  training_data_sync.py
alembic/: env.py
api/: __init__.py  app.py  auth.py  gateway.py  middleware.py  rate_limit.py  rate_limit_redis.py  rbac.py  schemas.py
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: main.rs  state.rs
apps/desktop-tauri/src-tauri/src/commands/: ai.rs  auth.rs  fs.rs  git.rs  mod.rs  search.rs  sync.rs  system.rs  terminal.rs  training.rs  updates.rs  workers.rs  workspace.rs
brain/: __init__.py  auto_programmer.py  bi_brain.py  bi_os_kernel.py  brain_api.py  brain_daemon.py  brain_factory.py  capsule.py  capsule_500.py  capsule_bridge.py  capsule_registry.py  capsule_router.py  capsule_tree.py  company_camera.py  council_auto_debate.py  council_brain.py  curriculum_learning.py  data_preprocessor.py  emergency_downloader.py  evaluator.py  h200_training_master.py  ide_controller.py  ide_file_learner.py  knowledge_distiller.py  knowledge_scout.py  lora_trainer.py  memory_system.py  mobile_scout.py  moe_router.py  scheduler.py  security_data_parser.py  self_eval.py  self_evolution_loop.py  self_trainer.py  training_dispatcher.py  training_pipeline.py  training_worker.py  virtual_factory.py  vision_layer.py  vision_scout.py
capsules/: .scout_seen.json
community/: __init__.py  code_sharing.py  db_service.py  forums.py  knowledge_base.py  models.py  profiles.py
config/: sage_brain_mapping.json  training_fleet.yaml
core/: __init__.py  cache.py  cache_manager.py  celery_config.py  config.py  connection_manager.py  database.py  email_service.py  logging_config.py  node_registry.py  service_models.py  sync_manager.py  tasks.py  training_coordinator.py  user_models.py  user_service.py
data/: pipeline.py
database/: connection.py  models.py  schema.sql
deploy/: SETUP_NOTES.md  auto_deploy.sh  bi-auto-update-mac.sh  bi-auto-update.ps1  bi-auto-update.sh  deploy_all.sh  deploy_emergency_downloader.sh  deploy_rtx.sh  deploy_windows.ps1  download_emergency_data.sh  install-worker.sh  nginx.conf  post-push.sh  rollback.sh  setup-auto-update.sh  setup_ssh_keys.sh  setup_tailscale.sh  update_server.py  zero_downtime_deploy.sh
device_control/: __init__.py
docs/: ADR-001-tauri-desktop.md  ADR-002-runtime-stack-and-data-platform.md  API_CONTRACTS_v1.md  API_SPEC.md  ARCHITECTURE.md  CODE_FREE_IDEA_MIGRATION_POLICY.md  COMPLETE_INTEGRATION_ALGORITHMS.md  COMPLETE_INTEGRATION_ALGORITHMS_WORLD_CLASS_2026-03-02.md  CONSOLIDATED_PLAN_STATUS_2026-02-22.md  DEPLOY_VPS.md  DESKTOP_IDE_MASTER_PLAN_2026.md  DESKTOP_V8_REALITY_CHECK_2026-03-02.md  DESKTOP_V8_SUPREME_PLAN_2026.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_ROADMAP.md.backup  DISTRIBUTED_HIERARCHICAL_TRAINING_PLAN.md  FINAL_VERIFICATION_REPORT.md  GITHUB_AUTO_DEPLOY_HOSTINGER_VPS.md  GO_NOGO_REPORT_2026-02-24.md  HOSTINGER_READINESS_REPORT_2026-02-22.md  IDEA_PARITY_TOP15_BACKLOG.md  IDE_IDEAS_MASTER.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE_100_PERCENT.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  INTEGRATION_IMPLEMENTATION_GUIDE_WORLD_CLASS_2026-03-02.md  LEGACY_DESKTOP_AUDIT_2026-02-22.md  MASTER_PLAN.md  MASTER_PLAN_110_PERCENT_UNIVERSE_CLASS_2026-03-02.md  MASTER_PLAN_V2.md  PROJECT_STATUS.md  README.md  REMOTE_ORCHESTRATOR.md  ROADMAP.md  SECURITY_FIXES_2026-02-23.md  SESSION_REPORT_2026-02-22.md  TASKS.md  TRAINING_RELAY_SETUP.md  V6_WEB_DESKTOP_MASTER_PLAN.md  VISION_MASTER.md  (+2 more)
erp/: __init__.py  accounting.py  crm.py  dashboard.py  erp_database_service.py  erp_db_service.py  erp_service.py  hr.py  inventory.py  invoices.py  models.py  reports.py
examples/: rtx4090_council_example.py
hierarchy/: __init__.py  activate.py  auto_learning_system.py  auto_programming.py  autonomous_council.py  autonomous_learning.py  checkpoint_loader.py  compliance_layer.py  connect_services.py  cosmic_bridge.py  council_ai_bridge.py  domain_experts.py  eternity_layer.py  qa_layer.py  (+24 more)
libs/protocol/: Cargo.toml
libs/protocol/src/: auth.rs  lib.rs  sync.rs  telemetry.rs  training.rs
libs/protocol/src/contracts/: mod.rs  v1.rs
services/sync-service/: Cargo.toml
services/sync-service/src/: crdt.rs  main.rs  store.rs  websocket.rs
v6/desktop-agent-rs/: Cargo.toml  README.md
v6/desktop-agent-rs/src/: main.rs
(+556 files in other folders)
