[package]
name = "bi-ide-protocol"
version = "0.1.0"
edition = "2021"
authors = ["BI-IDE Team"]
description = "Shared protocol contracts for BI-IDE Desktop"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
