[package]
name = "bi-ide-sync-service"
version = "0.1.0"
edition = "2021"
authors = ["BI-IDE Team"]
description = "CRDT Sync Service for BI-IDE Desktop"
license = "MIT"

[dependencies]
# Core
bi-ide-protocol = { path = "../../libs/protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "migrate", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Crypto
ring = "0.17"
base64 = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
parking_lot = "0.12"
dirs = "5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
